--- a/DigitalVox4.xcodeproj/xcshareddata/xcschemes/vox.render.xcscheme
+++ b/DigitalVox4.xcodeproj/xcshareddata/xcschemes/vox.render.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "0422954E278C30840090983F"
-               BuildableName = "libDigitalVox4.a"
+               BuildableName = "libvox.render.a"
                BlueprintName = "vox.render"
                ReferencedContainer = "container:DigitalVox4.xcodeproj">
             </BuildableReference>
@@ -51,7 +51,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "0422954E278C30840090983F"
-            BuildableName = "libDigitalVox4.a"
+            BuildableName = "libvox.render.a"
             BlueprintName = "vox.render"
             ReferencedContainer = "container:DigitalVox4.xcodeproj">
          </BuildableReference>
