--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "assets"]
 	path = assets
 	url = https://github.com/yangfengzzz/Assets.git
+[submodule "third_party/ozz"]
+	path = third_party/ozz
+	url = https://github.com/guillaumeblanc/ozz-animation.git
