--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "third_party/ozz"]
 	path = third_party/ozz
 	url = https://github.com/guillaumeblanc/ozz-animation.git
+[submodule "third_party/tinyobj"]
+	path = third_party/tinyobj
+	url = https://github.com/tinyobjloader/tinyobjloader.git
