--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "third_party/tinyobj"]
 	path = third_party/tinyobj
 	url = https://github.com/tinyobjloader/tinyobjloader.git
+[submodule "third_party/gflags"]
+	path = third_party/gflags
+	url = https://github.com/gflags/gflags.git
