--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule "third_party/gflags"]
 	path = third_party/gflags
 	url = https://github.com/gflags/gflags.git
+[submodule "third_party/nvcloth"]
+	path = third_party/nvcloth
+	url = https://github.com/NVIDIAGameWorks/NvCloth.git
