--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "third_party/nvcloth"]
 	path = third_party/nvcloth
 	url = https://github.com/NVIDIAGameWorks/NvCloth.git
+[submodule "third_party/metal-cpp"]
+	path = third_party/metal-cpp
+	url = https://github.com/bkaradzic/metal-cpp.git
