--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,12 @@
 [submodule "third_party/metal-cpp"]
 	path = third_party/metal-cpp
 	url = https://github.com/bkaradzic/metal-cpp.git
+[submodule "third_party/stb"]
+	path = third_party/stb
+	url = https://github.com/nothings/stb.git
+[submodule "third_party/astc"]
+	path = third_party/astc
+	url = https://github.com/ARM-software/astc-encoder
+[submodule "third_party/ktx"]
+	path = third_party/ktx
+	url = https://github.com/KhronosGroup/KTX-Software
